test-aws/aws_configs/us-west-1/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-06f4e0db2b01c775f",
     "NetworkAclId": "acl-01d75fe9c80b46434",
     "SubnetId": "subnet-01059af96aca5c18a"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-01d75fe9c80b46434",
   "OwnerId": "118292266645",
   "Tags": [],
   "VpcId": "vpc-045e0f052b4860185"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-4b36db2f",
     "NetworkAclId": "acl-43940226",
     "SubnetId": "subnet-5cf44105"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "PortRange": {
      "From": 22,
      "To": 22
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "162.243.144.192/32",
     "Egress": false,
     "PortRange": {
      "From": 3306,
      "To": 3306
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 200
    },
    {
     "CidrBlock": "104.236.156.171/32",
     "Egress": false,
     "PortRange": {
      "From": 3306,
      "To": 3306
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 300
    },
    {
     "CidrBlock": "107.170.243.58/32",
     "Egress": false,
     "PortRange": {
      "From": 3306,
      "To": 3306
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 400
    },
    {
     "CidrBlock": "104.236.167.119/32",
     "Egress": false,
     "PortRange": {
      "From": 3306,
      "To": 3306
     },
     "Protocol": "6",
     "RuleAction": "allow",
     "RuleNumber": 500
    },
    {
     "CidrBlock": "38.140.26.42/32",
     "Egress": false,
     "PortRange": {
      "From": 3306,
      "To": 3306
     },
     "Protocol": "6",
     "RuleAction": "deny",
     "RuleNumber": 600
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-43940226",
   "OwnerId": "118292266645",
   "Tags": [],
   "VpcId": "vpc-72850617"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-fb71a382",
     "NetworkAclId": "acl-8b8194ef",
     "SubnetId": "subnet-1013e177"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-8b8194ef",
   "OwnerId": "118292266645",
   "Tags": [],
   "VpcId": "vpc-1dc49479"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-02dcec408b8e5f7b0",
     "NetworkAclId": "acl-030fac8e68dfeadab",
     "SubnetId": "subnet-2b12664e"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": false,
   "NetworkAclId": "acl-030fac8e68dfeadab",
   "OwnerId": "118292266645",
   "Tags": [
    {
     "Key": "Name",
     "Value": "dev-machine-acl"
    }
   ],
   "VpcId": "vpc-72850617"
  },
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-2fac9a56",
     "NetworkAclId": "acl-028f5565",
     "SubnetId": "subnet-3e3b8359"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-028f5565",
   "OwnerId": "118292266645",
   "Tags": [],
   "VpcId": "vpc-23b7a947"
  }
 ]
}
